# libetsf_io

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
.github/workflows/: build.yml  linux.yml  macos.yml
config/etsf/: code.cf  functions.py  library.cf  specs.cf  template.Makefile.am  template.data  template.doc_group_Makefile.am  template.doc_utils_Makefile.am  template.low_level  template.low_level_att  template.low_level_var  template.module  template.tests  template.tests_init  template.tests_read  template.tests_write  template.utils_Makefile.am  template.utils_check.f90  template.utils_contents.f90  template.utils_file.f90
config/m4/: fortran.m4
config/robodoc/: robodoc-f90.rc  robodoc.css
config/scripts/: autogen_low_level.py  autogen_low_read_var.sh  autogen_low_write_var.sh  autogen_module.py  autogen_subroutines.py  autogen_tests.py  autogen_utils.py
debian/: changelog  control  copyright  etsf-io-doc.install  etsf-io.install  etsf-io.manpages  etsf_io.pc  etsf_io_utils.pc  libetsf-io-dev.install  libetsf-io-doc.install  rules  watch
doc/: etsf_io.1
doc/www/: Makefile.am  index.html
doc/www/group_level/: Makefile.am
doc/www/low_level/: Makefile.am
doc/www/tutorials/: MPI_output_of_a_density_f90.html  Makefile.am  README_f90.html  convert_to_xyz_f90.html  create_a_crystal_den_file_f90.html  index.html  mix_ETSF_and_non_ETSF_f90.html  read_a_file_f90.html  read_write_sub_access_f90.html
doc/www/utils/: Makefile.am  binary.html
docs/: etsf_io.md  etsf_io_file_private.md  etsf_io_file_public.md  etsf_io_low_level.md  etsf_io_tools.md  netcdf3_wrappers.md  netcdf4_wrappers.md  public_variables.md  read_routines.md  write_routines.md
scripts/: autogen_read_arrays.sh  autogen_write_arrays.sh
src/low_level/: Makefile.am  etsf_io_low_level.f90  netcdf3_wrappers.f90  netcdf4_wrappers.f90  public_variables.f90  read_routines.f90  read_routines.f90.in  write_routines.f90
src/tutorials/: MPI_output_of_a_density.f90  Makefile.am  README.f90  convert_to_xyz.f90  create_a_crystal_den_file.f90  mix_ETSF_and_non_ETSF.f90  read_a_file.f90  read_write_sub_access.f90
src/utils/: Makefile.am  etsf_io.f90  etsf_io_file.f90  etsf_io_file_private.f90  etsf_io_file_public.f90  etsf_io_tools.f90
tests/group_level/: Makefile.am  test_split_electrons_part1.cdl  test_split_electrons_part1.nc  test_split_electrons_part2.cdl  test_split_electrons_part2.nc  test_split_electrons_part3.cdl  test_split_electrons_part3.nc  tests_copy.f90  tests_module.f90  tests_run.sh
tests/low_level/: Makefile.am  check_att_t01.cdl  check_att_t01.nc  check_var_t01.cdl  check_var_t01.nc  get_var_t01.nc  open_read_t01.cdl  open_read_t01.nc  open_read_t02.cdl  open_read_t02.nc  open_read_t03.cdl  open_read_t03.nc  open_read_t04.cdl  read_dim_t01.cdl  read_dim_t01.nc  read_var_t01.cdl  read_var_t01.nc  tests_read.f90  tests_run.sh  tests_write.f90
tests/utils/: Makefile.am  si1002x1-o_DS1_DEN-etsf.nc  si1002x1-o_DS1_DEN-etsf.ref  wfs_complex-etsf.nc  wfs_complex-etsf.ref  wfs_real-etsf.nc  wfs_real-etsf.ref
