doc_DATA = \
	index.html \
	masterindex.html \
	robo_definitions.html \
	robodoc.css \
	robo_functions.html \
	robo_methods.html \
	robo_modules.html \
	robo_sourcefiles.html \
	robo_strutures.html \
	robo_sub_cat.html \
	robo_tuto_cat.html \
	toc_index.html

SUBDIRS = \
	low_level \
	group_level \
	tutorials \
	utils
