groupleveldoc_DATA = \
	etsf_io_dims_def_f90.html \
	etsf_io_dims_get_f90.html \
	etsf_io_dims_merge_f90.html \
	etsf_io_dims_trace_f90.html \
	etsf_io_geometry_def_f90.html \
	etsf_io_electrons_def_f90.html \
	etsf_io_kpoints_def_f90.html \
	etsf_io_basisdata_def_f90.html \
	etsf_io_gwdata_def_f90.html \
	etsf_io_dielectric_def_f90.html \
	etsf_io_main_def_f90.html \
	etsf_io_geometry_get_f90.html \
	etsf_io_electrons_get_f90.html \
	etsf_io_kpoints_get_f90.html \
	etsf_io_basisdata_get_f90.html \
	etsf_io_gwdata_get_f90.html \
	etsf_io_dielectric_get_f90.html \
	etsf_io_main_get_f90.html \
	etsf_io_geometry_put_f90.html \
	etsf_io_electrons_put_f90.html \
	etsf_io_kpoints_put_f90.html \
	etsf_io_basisdata_put_f90.html \
	etsf_io_gwdata_put_f90.html \
	etsf_io_dielectric_put_f90.html \
	etsf_io_main_put_f90.html \
	etsf_io_geometry_copy_f90.html \
	etsf_io_electrons_copy_f90.html \
	etsf_io_kpoints_copy_f90.html \
	etsf_io_basisdata_copy_f90.html \
	etsf_io_gwdata_copy_f90.html \
	etsf_io_dielectric_copy_f90.html \
	etsf_io_main_copy_f90.html \
	etsf_io_split_init_f90.html \
	etsf_io_split_allocate_f90.html \
	etsf_io_split_free_f90.html \
	etsf_io_split_def_f90.html \
	etsf_io_split_get_f90.html \
	etsf_io_split_put_f90.html \
	etsf_io_split_copy_f90.html \
	etsf_io_split_merge_f90.html \
	etsf_io_vars_free_f90.html \
	etsf_io_data_init_f90.html \
	etsf_io_data_read_f90.html \
	etsf_io_data_write_f90.html \
	etsf_io_data_contents_f90.html \
	etsf_io_data_get_f90.html \
	etsf_io_data_copy_f90.html \
	etsf_io_f90.html

EXTRA_DIST = $(groupleveldoc_DATA)
