utilsdoc_DATA = \
	binary.html \
	etsf_io_file_check_dielectric_function_data_f90.html \
	etsf_io_file_check_wavefunctions_data_f90.html \
	etsf_io_file_check_scalar_field_data_f90.html \
	etsf_io_file_check_crystallographic_data_f90.html \
	etsf_io_file_contents_f90.html \
	etsf_io_file_f90.html \
	etsf_io_file_public_f90.html \
	etsf_io_tools_f90.html

EXTRA_DIST = $(utilsdoc_DATA)
